# Tizzy

./: .gitignore  .travis.yml  CMakeLists.txt  README.md
.cmake/Modules/: FindLibDwarf.cmake  FindLibElf.cmake  FindLibZ.cmake  LibUtils.cmake  Subprojects.cmake
include/: tizzy.h
samples/: CMakeLists.txt  panic.c
src/: CMakeLists.txt  addr2line.c  addr2line.h  backtrace.c  backtrace.h  basename.c  config.h.in  dwarf.c  dwarf.h  pdb.c  section-elf.c  section-mach-o.c  section-pe.c  section.c  section.h  tizzy.c
